--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-@media screen and (min-width: 1025px) {
-
-}
 * {
   margin: 0px;
   padding: 0px;
@@ -107,6 +104,7 @@ nav{
 .about-text h3{
   margin: 15px 0px 0px 0px;
   color: #EC7505;
+  font-size: 20px;
 }
 .about-text h2{
   color: #EC7505;
@@ -147,6 +145,7 @@ nav{
 .portfolio-main p{
   text-align: center;
   font-size: 14px;
+  margin-bottom: 10px;
 }
 .gallery{
   position: relative;
@@ -236,15 +235,25 @@ nav{
   }
   .cover img{
     margin-top: 30px;
-    height: 80%;
+    height: 90%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 60%;
   }
 }
 
 /* Om mig */
+.about-text h2{
+  font-size: 20px;
+}
+.about-text p{
+  text-align: left;
+}
+.about-text h3{
+  text-align: left;
+  font-size: 16px;
+}
 
 /* Portfolio */
 .portfolio-main h1{
@@ -258,11 +267,16 @@ nav{
   grid-template-columns: auto auto auto auto;
 }
 
+/* Kontakt */
+.contact-text h2{
+  font-size: 20px;
+}
+
 /* CSS for Mobile */
 @media screen and (max-width: 480px) {
 /* Forside - Index */
   .cover img{
-    height: 60%;
+    height: 70%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -279,7 +293,7 @@ nav{
     height:30px;
     font-size: 10px;
   }
-  .about, .portfolio, .contact{
+  .about, .portfolio, .contact, .home{
     font-size: 14px;
   }
   .intro-text h1{
@@ -290,13 +304,23 @@ nav{
   }
 
 /* Om mig */
-
+.about-text h2{
+  font-size: 18px;
+}
+.about-text p{
+  font-size: 12px;
+}
+.about-text h3{
+  font-size: 14px;
+}
 /* Portfolio */
 .portfolio-main h1{
   font-size: 20px;
 }
 .portfolio-main p{
   font-size: 12px;
+  width: 85%;
+  margin-left: 15px;
 }
 .gallery{
   display: block;
@@ -310,4 +334,20 @@ nav{
 .gallery img{
   display: block;
   filter: brightness(1) grayscale(0);
+}
+
+/* Kontakt */
+.mailmobile p{
+  font-size: 12px;
+  text-align: center;
+  margin-left: 10px;
+}
+.mailmobile{
+  display: block;
+}
+.contact-text h2{
+  font-size: 18px;
+}
+.contact-text p{
+  font-size: 12px;
 }
